// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`display can be used to display (escaped) strings: expectDisplayResult 1`] = `
Object {
  "alertResult": undefined,
  "code": "display(\\"Tom's assisstant said: \\\\\\"tuna.\\\\\\"\\");",
  "displayResult": "\\"Tom's assisstant said: \\\\\\"tuna.\\\\\\"\\"",
  "errors": Array [],
  "result": Object {
    "status": "finished",
    "value": "Tom's assisstant said: \\"tuna.\\"",
  },
  "visualiseListResult": undefined,
}
`;

exports[`display can be used to display arrays: expectDisplayResult 1`] = `
Object {
  "alertResult": undefined,
  "code": "display([1, 2, [4, 5]]);",
  "displayResult": "[1, 2, [4, 5]]",
  "errors": Array [],
  "result": Object {
    "status": "finished",
    "value": Array [
      1,
      2,
      Array [
        4,
        5,
      ],
    ],
  },
  "visualiseListResult": undefined,
}
`;

exports[`display can be used to display functions: expectDisplayResult 1`] = `
Object {
  "alertResult": undefined,
  "code": "display(x => x); display((x, y) => x + y);",
  "displayResult": "x => x
(x, y) => x + y",
  "errors": Array [],
  "result": Object {
    "status": "finished",
    "value": [Function],
  },
  "visualiseListResult": undefined,
}
`;

exports[`display can be used to display funny numbers: expectDisplayResult 1`] = `
Object {
  "alertResult": undefined,
  "code": "display(1e38); display(NaN); display(Infinity);",
  "displayResult": "1e+38
NaN
Infinity",
  "errors": Array [],
  "result": Object {
    "status": "finished",
    "value": Infinity,
  },
  "visualiseListResult": undefined,
}
`;

exports[`display can be used to display lists: expectDisplayResult 1`] = `
Object {
  "alertResult": undefined,
  "code": "display(list(1, 2));",
  "displayResult": "[1, [2, null]]",
  "errors": Array [],
  "result": Object {
    "status": "finished",
    "value": Array [
      1,
      Array [
        2,
        null,
      ],
    ],
  },
  "visualiseListResult": undefined,
}
`;

exports[`display can be used to display numbers: expectDisplayResult 1`] = `
Object {
  "alertResult": undefined,
  "code": "display(0);",
  "displayResult": "0",
  "errors": Array [],
  "result": Object {
    "status": "finished",
    "value": 0,
  },
  "visualiseListResult": undefined,
}
`;

exports[`display can be used to display objects: expectDisplayResult 1`] = `
Object {
  "alertResult": undefined,
  "code": "display({a: 1, b: 2, c: {d: 3}});",
  "displayResult": "{\\"a\\": 1, \\"b\\": 2, \\"c\\": {\\"d\\": 3}}",
  "errors": Array [],
  "result": Object {
    "status": "finished",
    "value": Object {
      "a": 1,
      "b": 2,
      "c": Object {
        "d": 3,
      },
    },
  },
  "visualiseListResult": undefined,
}
`;

exports[`raw_display can be used to display (unescaped) strings directly: expectDisplayResult 1`] = `
Object {
  "alertResult": undefined,
  "code": "raw_display(\\"Tom's assisstant said: \\\\\\"tuna.\\\\\\"\\");",
  "displayResult": "Tom's assisstant said: \\"tuna.\\"",
  "errors": Array [],
  "result": Object {
    "status": "finished",
    "value": "Tom's assisstant said: \\"tuna.\\"",
  },
  "visualiseListResult": undefined,
}
`;
